--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
     "express": "4.16.4",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "react-scripts start",
